Re-apply hotfix2

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,11 +3,10 @@ name: Docker Namadillo 🐳
 on:
   push:
     tags:
-      - 'namadillo@v*'
+      - namadillo@v*
     branches:
       - main
       - stable-interface
-  workflow_dispatch:
 
 env:
   GIT_LFS_SKIP_SMUDGE: 1
